Spring boot 2.2 used.