@@ -29,7 +29,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>1.6</version>
+                <version>2.5.0</version>
                 <executions>
                     <execution>
                         <id>xjc</id>
@@ -39,7 +39,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <schemaDirectory>${project.basedir}/src/main/resources/schema/</schemaDirectory>
+                    <sources>
+                        <source>${project.basedir}/src/main/resources/schema/forum.xsd</source>
+                    </sources>
                     <outputDirectory>${project.basedir}/target/generated-sources/jaxb/</outputDirectory>
                     <clearOutputDir>true</clearOutputDir>
                 </configuration>
@@ -47,10 +49,6 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>java.xml.bind</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
